# apaman7644

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: default.toml
docs/: design_notes.md
prompts/: chapter_designer.txt  character_designer.txt  consistency_auditor.txt  critic.txt  editor.txt  novelist.txt  planner.txt  structure_writer.txt  style_auditor.txt
src/novel_auto_gen/cli/: main.py
src/novel_auto_gen/core/: config.py
src/novel_auto_gen/core/evaluation/: evaluator.py
src/novel_auto_gen/core/export/: exporter.py
src/novel_auto_gen/core/memory/: context_manager.py
src/novel_auto_gen/core/models/: __init__.py  entities.py
src/novel_auto_gen/core/pipeline/: engine.py
src/novel_auto_gen/core/prompts/: manager.py
src/novel_auto_gen/core/providers/: base.py  mock_provider.py  service.py
src/novel_auto_gen/core/revision/: reviser.py
src/novel_auto_gen/core/storage/: repository.py
tests/: test_cli.py  test_compare_runs.py  test_config.py  test_evaluation_format.py  test_memory.py  test_pipeline.py  test_storage.py
