[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-auto-gen"
version = "0.1.0"
description = "Iterative long-form Japanese novel generation system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
novelgen = "novel_auto_gen.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
